; ModuleID = '/home/carl/AnghaBench/jq/src/extr_inject_errors.c_clearerr.c'
source_filename = "/home/carl/AnghaBench/jq/src/extr_inject_errors.c_clearerr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@fail = common dso_local global i32* null, align 8
@fail_close = common dso_local global i32* null, align 8
@fail_write = common dso_local global i32* null, align 8
@fail_read = common dso_local global i32* null, align 8
@error = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @clearerr(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = call i32 @GET_REAL(void (i32*)* @clearerr)
  %4 = load i32*, i32** %2, align 8
  %5 = call i32 @real_clearerr(i32* %4)
  %6 = load i32*, i32** @fail, align 8
  %7 = load i32*, i32** %2, align 8
  %8 = icmp eq i32* %6, %7
  br i1 %8, label %9, label %10

9:                                                ; preds = %1
  store i32* null, i32** @fail_close, align 8
  store i32* null, i32** @fail_write, align 8
  store i32* null, i32** @fail_read, align 8
  store i32* null, i32** @fail, align 8
  store i64 0, i64* @error, align 8
  br label %10

10:                                               ; preds = %9, %1
  ret void
}

declare dso_local i32 @GET_REAL(void (i32*)*) #1

declare dso_local i32 @real_clearerr(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
